<resources>
    <string name="app_name">Cram Cards</string>
    <string name="who_was_the_third_president_of_the_united_states">Who was the third President of the United States?</string>
    <string name="thomas_jefferson">Thomas Jefferson</string>
    <string name="alexander_hamilton">Alexander Hamilton</string>
    <string name="john_adams">John Adams</string>
    <string name="hide_choices">Hide Choices</string>
    <string name="add_question">add question</string>
    <string name="enter_the_answer_here">Enter the answer here</string>
    <string name="save_button">save button</string>
    <string name="cancel_button">cancel button</string>
    <string name="enter_the_question_here">Enter the question here</string>
    <string name="next_question">Next question</string>
    <string name="delete_question">Delete question</string>
    <string name="_00">00</string>
</resources>