<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <TextView

        android:id="@+id/flashcard_question"
        android:layout_width="312dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/card_background"
        android:gravity="center"
        android:text="@string/who_was_the_third_president_of_the_united_states"
        android:textColor="#0C1446"
        android:textSize="40sp" />

    <TextView

        android:id="@+id/flashcard_answer"
        android:layout_width="336dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/answer_background"
        android:gravity="center"
        android:text="@string/thomas_jefferson"
        android:textColor="#e56b6f"
        android:textSize="40sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/answer1"
        android:layout_width="336dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="365dp"
        android:background="#FDF4E3"
        android:gravity="center"
        android:text="@string/alexander_hamilton"
        android:textColor="#EF5350"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/answer2"
        android:layout_width="336dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="310dp"
        android:background="#FDF4E3"
        android:gravity="center"
        android:text="@string/thomas_jefferson"
        android:textColor="#EF5350"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/answer3"
        android:layout_width="336dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="255dp"
        android:background="#FDF4E3"
        android:gravity="center"
        android:text="@string/john_adams"
        android:textColor="#EF5350"
        android:textSize="25sp" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp"
        android:id="@+id/toggle_choices_visibility"
        android:src="@drawable/hide_icon"
        android:contentDescription="@string/hide_choices"/>

    <ImageView
        android:id="@+id/add_question_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_add"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:contentDescription="@string/add_question" />


</RelativeLayout>